<resources>
    <string name="home">Trang chủ</string>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">eMerchandising</string>
    <string name="login_direction">Nhập mã số của bạn để đồng bộ danh sách các cửa hàng	được phân công đi kiểm tra</string>
    <string name="staff_code">Mã nhân viên</string>
    <string name="update">Cập nhật</string>
    <string name="submit_warning">Bạn có chắc chắn muốn đồng bộ?</string>
    <string name="submit_warning_contain">Khi đồng bộ dữ liệu sẽ bị xóa và dữ liệu mới sẽ được đồng bộ về</string>
    <string name="task_list">Lịch phân công</string>
    <string name="sync">Đồng bộ</string>
    <string name="settings">Cài đặt</string>
    <string name="help">Trợ giúp</string>
    <string name="task_list_desc">Các cửa hàng cần kiểm tra</string>
    <string name="sync_desc">Các cửa hàng cần đồng bộ lại kết quả kiểm tra</string>
    <string name="store_sync_desc">Các siêu thị cần đồng bộ lại kết quả kiểm tra</string>
    <string name="settings_desc">Thiết lập mã số nhân viên &amp; cài đặt kết nối</string>
    <string name="help_desc">Hướng dẫn sử dụng chương trình</string>
    <string name="task_list_icon">task_icon.png</string>
    <string name="sync_icon">sync_icon.png</string>
    <string name="settings_icon">setting_icon.png</string>
    <string name="refresh_icon">refresh_icon.png</string>
    <string name="help_icon">help_icon.png</string>
    <string name="updating">Đang cập nhật...</string>
    <string name="update_successful">Cập nhật thành công</string>
    <string name="update_failed">Cập nhật thất bại</string>
    <string name="message">Thông báo</string>
    <string name="empty_staff_code">Vui lòng nhập mã nhân viên</string>
    <string name="gps_not_ready">Vị trí GPS chưa sẵn sàng</string>
    <string name="back">Trở về</string>
    <string name="search_outlet">Tìm kiếm cửa hàng</string>
    <string name="map">Bản đồ</string>
    <string name="advanced_search">Tìm kiếm nâng cao</string>
    <string name="outletbrand">Nhà phân phối</string>
    <string name="address">Địa chỉ</string>
    <string name="update_tasklist">Cập nhật lịch phân công</string>
    <string name="update_tasklist_desc">Cập nhật lịch phân công từ máy chủ</string>
    <string name="total_outlet">Tổng số cửa hàng:</string>
    <string name="total_outlet_sync_success">Số cửa hàng đồng bộ thành công:</string>
    <string name="all">--Tất cả--</string>
    <string name="outlet_info">Thông tin cửa hàng</string>
    <string name="outlet_info_dbb">Audit những sản phẩm thuộc DBB</string>
    <string name="outlet_info_rival">Sản phẩm đối thủ</string>
    <string name="distributor_name">Nhà phân phối</string>
    <string name="sap_code">Mã SAP</string>
    <string name="dms_code">Mã DMS</string>
    <string name="gps_location">Vị trí GPS</string>
    <string name="distribution">Độ phủ</string>
    <string name="distribution_desc">Sản phẩm chính phải hiện diện</string>
    <string name="dbb">DBB</string>
    <string name="dbb_distributtion">Độ Phủ DBB</string>
    <string name="dbb_desc">Audit những sản phẩm thuộc DBB</string>
    <string name="dbb_distribution_desc">Sản phẩm chính DBB phải hiện diện</string>
    <string name="outlet_facing">Hiện diện sản phẩm</string>
    <string name="outlet_facing_desc">&lt;span style&#61;&#34;padding-top:1px&#34;&gt;Vị trí trưng bày sửa bột&lt;&#47;span&gt;&lt;br&gt;Số lượng trưng bày&lt;br&gt;Vật liệu bày biện</string>
    <string name="promotion">Khuyến mãi</string>
    <string name="promotion_title">Chương trình khuyến mãi</string>
    <string name="promotion_desc">Kiểm tra việc thực hiện chương trình khuyến mãi</string>
    <string name="picture">Hình ảnh</string>
    <string name="picture_desc">Chụp ảnh cửa hàng</string>
    <string name="bonus">Kiểm tra trả thưởng</string>
    <string name="bonus_desc">Kiểm tra trả thưởng</string>
    <string name="rival_desc">Sản phẩm đối thủ</string>
    <string name="active_status_desc">Cập nhật tình trạng hoạt động của cửa hàng</string>
    <string name="sync_gps">Cập nhật GPS</string>
    <string name="sync_gps_desc">Cập nhật GPS về máy chủ</string>
    <string name="checked_icon">checked_icon.png</string>
    <string name="uncheck_icon">uncheck_icon.png</string>
    <string name="gps_service_not_availabel">Vui lòng mở GPS trên điện thoại để cập nhật</string>
    <string name="gps_updating">Đang cập nhật...</string>
    <string name="outletbrand_facing">Số mặt trưng bày</string>
    <string name="ift_display_location">Ví trí trưng bày</string>
    <string name="ift_display_location_dbb">Hotzone</string>
    <string name="outlet_posm">Vật liệu bày biện</string>
    <string name="fullrange_number_range">Bạn phải nhập số từ 1 tới</string>
    <string name="fullrange_duplicate_number">Số này bạn đã nhập rồi</string>
    <string name="outlet_sync_list_title">Danh sách các cửa hàng cần đồng bộ</string>
    <string name="outlet_sync_no_outlet">Không có dữ liệu nào của cửa hàng để đồng bộ.</string>
    <string name="production_api_key">0ur_K2unhc3uFizA8dtXFvAzbabpnPtzyIuAPwA</string>
    <string name="sync_url">http://192.168.2.24:8080/MobileWS/getAuditTasks.html</string>
    <string name="submit_url">http://192.168.2.24:8080/MobileWS/synchOutletAuditResult.html</string>
    <string name="submit_picture_url">http://192.168.2.24:8080/MobileWS/fileUpload.html</string>
    <string name="submit_store_url">http://192.168.2.24:8080/MobileWS/synchStoreAuditResult.html</string>
    <string name="outlet_submit_gps_url">http://192.168.2.24:8080/MobileWS/updateOutletGPS.html</string>
    <string name="store_submit_gps_url">http://192.168.2.24:8080/MobileWS/updateStoreGPS.html</string>
    <string name="validate_password_url">http://192.168.2.24:8080/MobileWS/validatePassword.html</string>
    <string name="posm_sync">http://192.168.2.24:8080/api/posm/list.html</string>
    <string name="sync_begin">Bắt đầu đồng bộ</string>
    <string name="sync_timer_running">Tiến trình đồng bộ đang chạy</string>
    <string name="sync_failed">Đồng bộ thất bại</string>
    <string name="sync_end">Đồng bộ kết thúc</string>
    <string name="sync_result">Kết quả đồng bộ</string>
    <string name="sync_error_server_connection">Không thể kết nối đến máy chủ</string>
    <string name="sync_error_phone_connection">Không thể kết nối đến máy chủ. Vui lòng kiểm tra kết nối trên điện thoại</string>
    <string name="sync_error_nofound_auditorcode">Mã nhân viên không tồn tại</string>
    <string name="sync_error_nofound_outlet">Không có cửa hàng nào được tìm thấy</string>
    <string name="sync_error_nofound_store">Không có siêu thị nào được tìm thấy</string>
    <string name="sync_error_nofound_outlet_and_store">Không có cửa hàng và siêu thị nào được tìm thấy</string>
    <string name="sync_result_total">Tổng số cửa hàng</string>
    <string name="sync_result_success">Số cửa hàng đồng bộ thành công</string>
    <string name="sync_result_failed">Số cửa hàng đồng bộ thất bại</string>
    <string name="general_error">Có lỗi xảy ra, xin vui lòng thử lại sau</string>
    <string name="outlet_sync_not_finished_yet">Quá trình kiểm tra của cửa hàng chưa hoàn tất. Vui lòng kiểm tra tất cả các mục trước khi đồng bộ.</string>
    <string name="outlet_sync_facing_finished_yet">Vui lòng chọn một vị trí trưng bày của cửa hàng, bạn chưa chọn vị trí nào ?</string>
    <string name="store_pictures">Hình ảnh siêu thị</string>
    <string name="outlet_pictures">Hình ảnh cửa hàng</string>
    <string name="take_photo_button">Chụp hình</string>
    <string name="take_photo">Chụp ảnh</string>
    <string name="notes">Ghi chú</string>
    <string name="promotion_code">Mã chương trình</string>
    <string name="promotion_name">Tên chương trình</string>
    <string name="promotion_time">Thời gian</string>
    <string name="promotion_rules">Thể lệ chương trình</string>
    <string name="promotion_buy_time">Khi mua/Trưng bày</string>
    <string name="promotion_get">Được nhận</string>
    <string name="known">Biết</string>
    <string name="active_staus">Tình trạng cửa hàng</string>
    <string name="status_closed">Đóng cửa</string>
    <string name="status_change_business">Thay đổi hình thức kinh doanh</string>
    <string name="status_not_found">Không tìm thấy</string>
    <string name="status_refuse_audit">Cửa hàng từ chối khảo sát</string>
    <string name="status_not_sell">Không bán sản phẩm</string>
    <string name="status_not_join">Không tham gia trưng bày</string>
    <string name="store_info">Thông tin siêu thị</string>
    <string name="search_store">Tìm kiếm siêu thị</string>
    <string name="store">Siêu thị</string>
    <string name="store_3s">3S</string>
    <string name="store_3s_desc">Sản phẩm hiện diện tại quày kệ &lt;br&gt;Thị phần trưng bày tại quày kệ&lt;br&gt;Thị phần trưng bày ngoài quày kệ</string>
    <string name="store_visibility">Hiện diện</string>
    <string name="store_visibility_desc">Vị trí trưng bày sản phẩm&lt;br&gt;Vật liệu bày biện</string>
    <string name="store_picture">Hình ảnh</string>
    <string name="store_picture_desc">Chụp ảnh siêu thị</string>
    <string name="store_promotion">Khuyến mãi</string>
    <string name="store_promotion_desc">Kiểm tra việc thực hiện chương trình khuyến mãi</string>
    <string name="store_account">Hệ thống   : </string>
    <string name="store_name">Siêu thị   : </string>
    <string name="store_address">Địa chỉ    : </string>
    <string name="store_gps_location">Vị trí GPS : </string>
    <string name="store_3s_shelf_out_of_stock">Sản phẩm hiện diện tại quày kệ</string>
    <string name="store_3s_share_of_shelf">Thị phần trưng bày tại quày kệ</string>
    <string name="store_3s_share_of_display">Thị phần trưng bày ngoài quày kệ</string>
    <string name="power_sku">Sản phẩm chính phải hiện diện</string>
    <string name="full_range_sku">Các bước sản phẩm</string>
    <string name="full_range_sku_dbb">Sản phẩm DBB</string>
    <string name="lastest_bonus">Kiểm tra trả thưởng</string>
    <string name="store_sod_ge">Đầu kệ</string>
    <string name="store_sod_ss">Ụ</string>
    <string name="store_sod_other">Khác (Tủ đông, tủ mát,...)</string>
    <string name="full_range_facing">Trưng bày đúng thứ tự</string>
    <string name="outlet_lastest_bonus">Lần cuối nhận thưởng là khi</string>
    <string name="select">Chọn</string>
    <string name="store_visibility_brand_location">Vị trí trưng bày sản phẩm</string>
    <string name="action_settings">Cài đặt</string>
    <string name="cam_title">Chụp ảnh</string>
    <string name="cam_shortdescription">Chụp ảnh Overview, Tool, Đồng phục, Trước TB, Sau TB</string>
    <string name="gps_title">Check In</string>
    <string name="before_title">Trước TB</string>
    <string name="after_title">Sau TB</string>
    <string name="order_title">Đặt hàng</string>
    <string name="init_newdays">CHUẨN BỊ ĐẦU NGÀY</string>
    <string name="init_newdays_shortdescription">Cập nhật dữ liệu ngày</string>
    <string name="audit_days">TRƯNG BÀY TẠI CỬA HÀNG</string>
    <string name="audit_days_shortdescription">Audit trưng bày, khảo sát, khiếu nại, đặt hàng</string>
    <string name="end_days">KẾT THÚC NGÀY</string>
    <string name="end_days_shortdescription">Gửi dữ liệu làm việc</string>
    <string name="overview">Overview</string>
    <string name="tool">Tool</string>
    <string name="before">Trước TB</string>
    <string name="after">Sau TB</string>
    <string name="uniform">Đồng phục</string>
    <string name="complaint">Complaint</string>
    <string name="total">Tổng cộng</string>
    <string name="add_outlet_title">Thêm cửa hàng chưa có trong kế hoạch phân công hôm nay</string>
    <string name="add_outlet_finded">Danh sách cửa hàng được tìm</string>
    <string name="select_outlet">Chọn cửa hàng</string>
    <string name="statistics_title">Thống kê các loại trưng bày của cửa hàng được đồng bộ</string>
    <string name="detailed_info">Thông tin chi tiết</string>
</resources>