<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/layoutButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOverview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shadow"
            android:drawableTop="@drawable/ic_image_white_24dp"
            android:paddingTop="20dp"
            android:text="@string/overview"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnTool"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow1"
            android:drawableTop="@drawable/ic_add_location_white_24dp"
            android:paddingTop="20dp"
            android:text="@string/tool"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnUniform"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow2"
            android:drawableTop="@drawable/ic_view_carousel_white_24dp"
            android:paddingTop="20dp"
            android:text="@string/uniform"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutButton1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBefore"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shadow3"
            android:drawableTop="@drawable/ic_view_carousel_white_24dp"
            android:paddingTop="20dp"
            android:text="@string/before"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnAfter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow6"
            android:drawableTop="@drawable/ic_record_voice_over_white_24dp"
            android:paddingTop="20dp"
            android:text="@string/after"
            android:textColor="#fff" />
    </LinearLayout>




</RelativeLayout>
