<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/outletInfo"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@color/primary"
        android:layout_height="113dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cam_title"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:id="@+id/outletName" />
        <!--android:text="@string/cam_shortdescription"-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_marginLeft="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:id="@+id/outletCode" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_marginLeft="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cam_shortdescription"
            android:id="@+id/outletAddress" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outletInfo"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shadow"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:paddingTop="20dp"
            android:text="@string/cam_title"
            android:textColor="#fff" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow1"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:paddingTop="20dp"
            android:text="@string/gps_title"
            android:textColor="#fff" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow2"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:paddingTop="20dp"
            android:text="@string/before_title"
            android:textColor="#fff" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutButton1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shadow3"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:paddingTop="20dp"
            android:text="@string/after_title"
            android:textColor="#fff" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow6"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:paddingTop="20dp"
            android:text="@string/complaint"
            android:textColor="#fff" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shadow5"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:paddingTop="20dp"
            android:text="@string/order_title"
            android:textColor="#fff" />
    </LinearLayout>



</RelativeLayout>
