<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
	<android.support.v4.widget.DrawerLayout
		xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
		android:id="@+id/drawer_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#ffffff">

		<LinearLayout android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dip">

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/defaultTextColor"
				android:text="@string/login_direction"/>

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/defaultTextColor"
				android:textStyle="bold"
				android:paddingTop="10dip"
				android:text="@string/staff_code"/>

			<EditText android:id="@+id/staff_code" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:layout_marginBottom="20dip"
				android:singleLine="true"/>




			<Button
				android:id="@+id/btnLogin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/update" />

		</LinearLayout>
		<!-- The navigation drawer -->
		<ListView
			android:id="@+id/left_drawer"
			android:layout_width="240dp"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:background="#fff"
			android:choiceMode="singleChoice"
			android:divider="@android:color/transparent"
			android:dividerHeight="0dp" />
	</android.support.v4.widget.DrawerLayout>
</ScrollView>