<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/add_outlet_title"
        android:gravity="center"
        android:textSize="18dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_outlet_finded"
        android:padding="6dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@color/primary_kanban"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginRight="-3dp">
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lnAddOutlet">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.v4.widget.SwipeRefreshLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp">

                    </android.support.v7.widget.RecyclerView>


                </android.support.v4.widget.SwipeRefreshLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_outlet"
                    android:theme="@style/PrimaryButton"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>


        </android.support.design.widget.CoordinatorLayout>



    </android.support.v7.widget.CardView>



</LinearLayout>